# fractal-app

./: .gitignore  CMakeLists.txt  addimg.cpp  readme.md
main/: CMakeLists.txt  ColorPalette.cpp  ColorPalette.h  FractalImageCreator.cpp  FractalImageCreator.h  FractalWidget.cpp  FractalWidget.h  MainWindow.cpp  MainWindow.h  Mandelbrot.cpp  Mandelbrot.h  Timer.h  main.cpp
thread_pool/: CMakeLists.txt  task_queue.cpp  task_queue.h  thread_pool.cpp  thread_pool.h
utils/: CMakeLists.txt  helpers.h  timer.h
